<resources>
    <string name="app_name">VirusApp</string>

    <!--    home page-->

    <string name="korona_Virus">করোনা ভাইরাস</string>
    <string name="dengu_jor"> ডেঙ্গু জ্বরের </string>
    <string name="chikon_Guniya">চিকন গুনিয়া</string>
    <string name="melara">ম্যালেরিয়া </string>
    <string name="doctor">ডাক্তার</string>
    <string name="diagnose">রোগ নির্ণয় করুন </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- home page end-->


    <!--    korona virus-->

    <string name="item1C">করোনা ভাইরাস ইতিহাস</string>
    <string name="item2C">করোনা ভাইরাস কি</string>
    <string name="item3C">করোনা ভাইরাস যেভাবে ছড়ায়</string>
    <string name="item4C">করোনা ভাইরাসের লক্ষণ </string>
    <string name="item5C">করোনা ভাইরাস প্রতিরোধ যা করবেন</string>
    <string name="item6C">করোনা ভাইরাস আক্রান্ত হলে কি  করণীয়</string>

    <!--    Corona  Virus History-->


    <string-array name="corona_history_parent">

        <item>নতুন আতঙ্ক করোনা ভাইরাস সম্পর্কে বিস্তারিত জানুন </item>
        <item> করোনা ভাইরাস</item>
        <item>কোভিড-১৯ </item>
        <item>কোথা থেকে এলো করোনাভাইরাস? </item>
        <item>কোন প্রাণী থেকে ছড়িয়েছে করোনাভাইরাস? </item>

    </string-array>

    <!--    <string name="headnig1">নতুন আতঙ্ক করোনা ভাইরাস সম্পর্কে বিস্তারিত জানুন </string>-->
    <!--<string name="heading2">করোনা ভাইরাস </string>-->
    <!--<string name="heading3">কোভিড-১৯</string>-->
    <!--<string name="heading4">কোথা থেকে এলো করোনাভাইরাস?</string>-->
    <!--<string name="heading5">কোন প্রাণী থেকে ছড়িয়েছে করোনাভাইরাস?</string>-->


    <string-array name="corona_history_child">

        <item>

            একটি ভাইরাস- যা পূর্বে বিজ্ঞানীদের অজানা ছিল- এর মধ্যেই চীনে অনেক মানুষের ফুসফুসের মারাত্মক রোগ সৃষ্টি করেছে এবং বিশ্বের নানা দেশে এটি ছড়িয়ে পড়ছে। \n\n

        ভাইরাসটি রোগীদের শরীরে নিউমোনিয়া তৈরি করছে, এমন একটি ভাইরাস সবসময়েই উদ্বেগজনক। ফলে সারা বিশ্বের স্বাস্থ্য কর্মকর্তারা চরম সতর্ক অবস্থায় রয়েছেন।
        </item>
        <item>
        চীনের কর্মকর্তারা নিশ্চিত করেছেন যে, করোনাভাইরাসের কারণে সেখানে অসুস্থতা বা মৃত্যুর ঘটনাগুলো ঘটেছে। \n

করোনাভাইরাস এমন একটি সংক্রামক ভাইরাস - যা এর আগে কখনো মানুষের মধ্যে ছড়ায়নি। \n

ভাইরাসটির আরেক নাম ২০১৯ - এনসিওভি বা নভেল করোনাভাইরসা। এটি এক ধরণের করোনাভাইরাস। করোনাভাইরাসের অনেক রকম প্রজাতি আছে,
            কিন্তু এর মধ্যে মাত্র ছয়টি মানুষের দেহে সংক্রমিত হতে পারে। তবে নতুন ধরণের ভাইরাসের কারণে সেই সংখ্যা এখন থেকে হবে সাতটি। \n

২০০২ সাল থেকে চীনে মহামারী আকারে ছড়িয়ে পড়া সার্স (পুরো নাম সিভিয়ার এ্যাকিউট রেসপিরেটরি সিনড্রোম) নামে যে ভাইরাসের সংক্রমণে
            পৃথিবীতে ৭৭৪জনের মৃত্যু হয়েছিল আর ৮০৯৮জন সংক্রমিত হয়েছিল। সেটিও ছিল এক ধরণের করোনাভাইরাস।
\n
\'\'সার্সের ভয়াবহ অভিজ্ঞতা এখনো আমরা ভুলতে পারিনি, ফলে নতুন ভাইরাসের প্রচণ্ড ভীতির তৈরি হয়েছে। কিন্তু এ ধরণের রোগ মোকাবেলায় আমরা এখন অনেক বেশি প্রস্তুত,\'\'
            বলছেন ওয়েলকাম ট্রাস্টের চিকিৎসক জোসি গোল্ডিং।
\n


        </item>


        <item> নতুন এই রোগটিকে প্রথমদিকে নানা নামে ডাকা হচ্ছিল, যেমন: \'চায়না ভাইরাস\', \'করোনাভাইরাস\', \'২০১৯ এনকভ\', \'নতুন ভাইরাস\', \'রহস্য ভাইরাস\' ইত্যাদি।
\n\n

এ বছরের ফেব্রুয়ারি মাসের দ্বিতীয় সপ্তাহে বিশ্ব স্বাস্থ্য সংস্থা রোগটির আনুষ্ঠানিক নাম দেয় কোভিড-১৯ যা \'করোনাভাইরাস ডিজিজ ২০১৯\'-এর সংক্ষিপ্ত রূপ।</item>


        <item>

        সবসময়েই নতুন নতুন ভাইরাস সনাক্ত হয়ে থাকে।\n

কোন একটি প্রাণী থেকে এসে এসব ভাইরাস মানব শরীরে বাসা বাধতে শুরু করে।\n

বিশ্ব স্বাস্থ্য সংস্থার ধারণা ভাইরাসটি উৎস কোনো প্রাণী।\n
যতটুকু জানা যায়, মানুষের আক্রান্ত হবার ঘটনাটি ঘটেছে চীনের উহান শহরে সামুদ্রিক মাছ পাইকারি বিক্রি হয় এমন একটি বাজারে।\n

করোনাভাইরাস ভাইরাস পরিবারে আছে তবে এ ধরণের ছয়টি ভাইরাস আগে পরিচিত থাকলেও এখন যেটিতে সংক্রমিত হচ্ছে মানুষ সেটি নতুন।\n

বেশিরভাগ করোনাভাইরাসই বিপজ্জনক নয় কিন্তু আগে থেকে অপরিচিত এই নতুন ভাইরাসটি ভাইরাল নিউমোনিয়াকে মহামারীর দিকে ঠেলে দিতে পারে বলে আশংকা করা হচ্ছে।\n

নটিংহ্যাম বিশ্ববিদ্যালয়ের ভাইরাস বিশেষজ্ঞ জোনাথন বল বলছেন, \'\'আমরা যদি অতীতে মহামারিগুলোর দিকে তাকাই, এমনকি এটা যদি নতুন করোনাভাইরাসও হয়, এটা কোন একটা প্রাণীর শরীর থেকে এসেছে। \'\'\n

সার্স ভাইরাস প্রথমে বাদুরের শরীর থেকে খট্টাশের শরীরে, এরপরে সেটা মানব শরীরে চলে আসে।\n

মধ্যপ্রাচ্যের ফুসফুসের রোগ মার্স ( পুরো নাম: মিডল ইস্ট রেসপিরেটরি সিনড্রোম), যাতে ২৪৯৪জন সংক্রান্ত রোগীর মধ্যে ৮৫৮ মারা গিয়েছিলেন, রোগটি নিয়মিতভাবে এক কুঁজওয়ালা উট থেকে মানব শরীরে ছড়িয়ে পড়ে। \n

        </item>
        <item>
        একবার যদি ভাইরাসের উৎস প্রাণীটি সনাক্ত করা সম্ভব হয়, তাহলে রোগটি মোকাবেলা করা অনেক সহজ হয়। \n

করোনাভাইরাসের সঙ্গে সম্পর্ক আছে চীনের উহায়ের দক্ষিণ সমুদ্রের খাবারের পাইকারি বাজারের সঙ্গে। \n

যদিও বেশ কিছু সামুদ্রিক প্রাণী করোনাভাইরাস বহন করতে পারে (যেমন বেলুগা তিমি), ওই বাজারটিতে অনেক জীবন্ত প্রাণীও থাকে, যেমন মুরগি, বাদুর, খরগোশ, সাপ- এসব প্রাণী করোনাভাইরাসের উৎস হতে পারে। \n

গবেষকরা বলছেন, চীনের হর্সশু নামের একপ্রকার বাদুরের সঙ্গে এই ভাইরাসের ঘনিষ্ঠ মিল রয়েছে। \n
        </item>
    </string-array>

    <!--    <string name="heading1_details"> একটি ভাইরাস- যা পূর্বে বিজ্ঞানীদের অজানা ছিল- এর মধ্যেই চীনে অনেক-->
    <!--        মানুষের ফুসফুসের মারাত্মক রোগ সৃষ্টি করেছে এবং বিশ্বের নানা দেশে এটি ছড়িয়ে পড়ছে।-->

    <!--    ভাইরাসটি রোগীদের শরীরে নিউমোনিয়া তৈরি করছে, এমন একটি ভাইরাস সবসময়েই উদ্বেগজনক। ফলে সারা বিশ্বের স্বাস্থ্য কর্মকর্তারা চরম সতর্ক অবস্থায় রয়েছেন।-->


    <!--    </string>-->

    <!--    <string name="heading1_details2">-->

    <!--        চীনের কর্মকর্তারা নিশ্চিত করেছেন যে, করোনাভাইরাসের কারণে সেখানে অসুস্থতা বা মৃত্যুর ঘটনাগুলো ঘটেছে।\n-->

    <!--করোনাভাইরাস এমন একটি সংক্রামক ভাইরাস - যা এর আগে কখনো মানুষের মধ্যে ছড়ায়নি।\n-->

    <!--ভাইরাসটির আরেক নাম ২০১৯ - এনসিওভি বা নভেল করোনাভাইরসা। এটি এক ধরণের করোনাভাইরাস। করোনাভাইরাসের অনেক রকম প্রজাতি আছে,-->
    <!--        কিন্তু এর মধ্যে মাত্র ছয়টি মানুষের দেহে সংক্রমিত হতে পারে। তবে নতুন ধরণের ভাইরাসের কারণে সেই সংখ্যা এখন থেকে হবে সাতটি।\n-->

    <!--২০০২ সাল থেকে চীনে মহামারী আকারে ছড়িয়ে পড়া সার্স (পুরো নাম সিভিয়ার এ্যাকিউট রেসপিরেটরি সিনড্রোম) নামে যে ভাইরাসের সংক্রমণে পৃথিবীতে-->
    <!--        ৭৭৪জনের মৃত্যু হয়েছিল আর ৮০৯৮জন সংক্রমিত হয়েছিল। সেটিও ছিল এক ধরণের করোনাভাইরাস।-->

    <!--\'\'সার্সের ভয়াবহ অভিজ্ঞতা এখনো আমরা ভুলতে পারিনি, ফলে নতুন ভাইরাসের প্রচণ্ড ভীতির তৈরি হয়েছে। কিন্তু এ ধরণের রোগ মোকাবেলায় আমরা এখন অনেক বেশি প্রস্তুত,\'\'-->
    <!--        বলছেন ওয়েলকাম ট্রাস্টের চিকিৎসক জোসি গোল্ডিং।-->
    <!--    </string>-->

    <!--    <string name="heading1_details3">-->

    <!--        নতুন এই রোগটিকে প্রথমদিকে নানা নামে ডাকা হচ্ছিল, যেমন: \' চায়না ভাইরাস \', \'করোনাভাইরাস \', \'২০১৯ এনকভ\', \'নতুন ভাইরাস \', \'রহস্য ভাইরাস\' ইত্যাদি।-->

    <!--এ বছরের ফেব্রুয়ারি মাসের দ্বিতীয় সপ্তাহে বিশ্ব স্বাস্থ্য সংস্থা রোগটির আনুষ্ঠানিক নাম দেয় কোভিড-১৯ যা \'করোনাভাইরাস ডিজিজ ২০১৯\'-এর সংক্ষিপ্ত রূপ।-->
    <!--    </string>-->

    <!--    <string name="heading1_details4">-->

    <!--        সবসময়েই নতুন নতুন ভাইরাস সনাক্ত হয়ে থাকে।-->

    <!--কোন একটি প্রাণী থেকে এসে এসব ভাইরাস মানব শরীরে বাসা বাধতে শুরু করে।-->

    <!--বিশ্ব স্বাস্থ্য সংস্থার ধারণা ভাইরাসটি উৎস কোনো প্রাণী।-->
    <!--যতটুকু জানা যায়, মানুষের আক্রান্ত হবার ঘটনাটি ঘটেছে চীনের উহান শহরে সামুদ্রিক মাছ পাইকারি বিক্রি হয় এমন একটি বাজারে।-->

    <!--করোনাভাইরাস ভাইরাস পরিবারে আছে তবে এ ধরণের ছয়টি ভাইরাস আগে পরিচিত থাকলেও এখন যেটিতে সংক্রমিত হচ্ছে মানুষ সেটি নতুন।-->

    <!--বেশিরভাগ করোনাভাইরাসই বিপজ্জনক নয় কিন্তু আগে থেকে অপরিচিত এই নতুন ভাইরাসটি ভাইরাল নিউমোনিয়াকে মহামারীর দিকে ঠেলে দিতে পারে বলে আশংকা করা হচ্ছে।-->

    <!--নটিংহ্যাম বিশ্ববিদ্যালয়ের ভাইরাস বিশেষজ্ঞ জোনাথন বল বলছেন, \'\'আমরা যদি অতীতে মহামারিগুলোর দিকে তাকাই, এমনকি এটা যদি নতুন করোনাভাইরাসও হয়,-->
    <!--        এটা কোন একটা প্রাণীর শরীর থেকে এসেছে।\'\'-->

    <!--সার্স ভাইরাস প্রথমে বাদুরের শরীর থেকে খট্টাশের শরীরে, এরপরে সেটা মানব শরীরে চলে আসে।-->

    <!--মধ্যপ্রাচ্যের ফুসফুসের রোগ মার্স ( পুরো নাম: মিডল ইস্ট রেসপিরেটরি সিনড্রোম), যাতে ২৪৯৪জন সংক্রান্ত রোগীর মধ্যে ৮৫৮ মারা গিয়েছিলেন, রোগটি নিয়মিতভাবে এক কুঁজওয়ালা উট থেকে মানব শরীরে ছড়িয়ে পড়ে।-->
    <!--    </string>-->

    <!--    <string name="heading1_details5">-->
    <!--একবার যদি ভাইরাসের উৎস প্রাণীটি সনাক্ত করা সম্ভব হয়, তাহলে রোগটি মোকাবেলা করা অনেক সহজ হয়।-->

    <!--করোনাভাইরাসের সঙ্গে সম্পর্ক আছে চীনের উহায়ের দক্ষিণ সমুদ্রের খাবারের পাইকারি বাজারের সঙ্গে।-->

    <!--যদিও বেশ কিছু সামুদ্রিক প্রাণী করোনাভাইরাস বহন করতে পারে (যেমন বেলুগা তিমি), ওই বাজারটিতে অনেক জীবন্ত প্রাণীও থাকে, যেমন মুরগি, বাদুর, খরগোশ, সাপ- এসব প্রাণী করোনাভাইরাসের উৎস হতে পারে।-->

    <!--গবেষকরা বলছেন, চীনের হর্সশু নামের একপ্রকার বাদুরের সঙ্গে এই ভাইরাসের ঘনিষ্ঠ মিল রয়েছে।-->
    <!--    </string>-->


</resources>
