<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="8"
    android:background="@color/white">

<!--    <RelativeLayout-->
<!--        android:layout_weight="2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        >-->

<!--    </RelativeLayout>-->

<GridLayout
    android:id="@+id/mainGridId"
    android:columnCount="2"
    android:rowCount="3"
    android:padding="14dp"
    android:columnOrderPreserved="true"
    android:alignmentMode="alignMargins"
    android:layout_weight="8"
    android:layout_width="match_parent"
    android:layout_height="0dp">

<!--    Row 1-->
<!--    Column 1 -->

    <androidx.cardview.widget.CardView
        android:id="@+id/card1Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/cardbg"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pic1"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/korona_Virus"
                android:layout_gravity="center"
                android:textSize="15sp"
               android:fontFamily="@font/hind_siliguri_bold"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_margin="5dp"
              />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

<!--    column 2-->

    <androidx.cardview.widget.CardView
        android:id="@+id/card2Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/cardbg"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pic2"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dengu_jor"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:fontFamily="@font/hind_siliguri_bold"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_margin="5dp"
              />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!--column 3 -->

    <androidx.cardview.widget.CardView
        android:id="@+id/card3Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/cardbg"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pic3"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chikon_Guniya"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:fontFamily="@font/hind_siliguri_bold"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_margin="5dp"
               />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!--column 4 -->

    <androidx.cardview.widget.CardView
        android:id="@+id/card4Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/cardbg"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pic4"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/melara"
                android:textSize="15sp"
                android:fontFamily="@font/hind_siliguri_bold"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_margin="5dp"
               />


        </LinearLayout>
    </androidx.cardview.widget.CardView>





    <!--column 5 -->

    <androidx.cardview.widget.CardView
        android:id="@+id/card5Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/cardbg"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pic5"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor"
                android:textSize="15sp"
                android:fontFamily="@font/hind_siliguri_bold"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_margin="5dp"
               />


        </LinearLayout>
    </androidx.cardview.widget.CardView>



    <!--column 6 -->

    <androidx.cardview.widget.CardView
        android:id="@+id/card6Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/cardbg"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pic3"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diagnose"
                android:textSize="15sp"
                android:fontFamily="@font/hind_siliguri_bold"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textAlignment="center"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>



</GridLayout>


<!--bottom navigation-->


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnavigationId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/cardbg"
        app:itemIconTint="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation_item"
        tools:ignore="MissingConstraints" />


</LinearLayout>


